// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createClusterLink Should return - 1`] = `"-"`;

exports[`createClusterLink Should return - 2`] = `"-"`;

exports[`createClusterLink Should return - 3`] = `"-"`;

exports[`createClusterLink Should return cluster name 1`] = `"myrls1-gbapp"`;

exports[`createClusterLink Should return createClusterLink 1`] = `
<a
  href="undefined/applications/default/myrls1-gbapp"
>
  myrls1-gbapp
</a>
`;

exports[`getAppViolationLabels Should return "-" 1`] = `"-"`;

exports[`getAppViolationLabels Should return "-" 2`] = `"-"`;

exports[`getAppViolationLabels Should return "-" 3`] = `"-"`;

exports[`getAppViolationLabels Should return "-" 4`] = `"-"`;

exports[`getAppViolationLabels Should return multi 1`] = `
<TruncateText
  maxCharacters={35}
  text="test-policy-111, test-policy-222"
/>
`;

exports[`getAppViolationLabels Should return multi 2`] = `
<TruncateText
  maxCharacters={35}
  text="test-policy-111, test-policy-333, "
/>
`;

exports[`getAppViolationLabels Should return single 1`] = `
<TruncateText
  maxCharacters={35}
  text="test-policy-111"
/>
`;
